--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@astrojs/mdx": "^0.19.1",
     "@astrojs/tailwind": "^3.1.2",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@types/canvas-confetti": "^1.6.0",
     "astro": "^2.4.1",
     "autoprefixer": "^10.4.14",
